# Champ_mail

./: .env.example  INSTALL.md  PROFESSIONAL_EMAIL_PLAN.md  champmail  docker-compose.override.yml  docker-compose.yml  e2e_test_results.json  install.sh  test_e2e_accounts.py
backend/: Dockerfile  README.md  SKILL.md  TESTING.md  pyproject.toml  railway.toml  requirements.txt
backend/alembic/versions/: 006_campaign_tracking_tables.py  007_utm_tracking_tables.py  009_prospect_assignment_and_sequence_logs.py  010_email_account_from_email_and_campaign_cadence.py
backend/app/: celery_app.py  main.py
backend/app/api/v1/: auth.py  campaigns.py  domains.py  email_accounts.py  graph.py  (+4 more)
backend/app/core/: config.py
backend/app/db/: champgraph.py  falkordb.py
backend/app/models/: __init__.py  campaign.py  email_account.py  sequence.py
backend/app/schemas/: sequence.py
backend/app/services/: campaign_docs.py  campaigns.py  domain_rotation.py  email_account_service.py  email_provider.py  email_service.py  prospect_service.py  sequence_service.py  templates.py  three_point_followup.py  user_service.py
backend/app/tasks/: bounces.py  campaign_tasks.py  domains.py  sending.py  sequences.py  warmup.py
backend/cli/: __init__.py  champmail_cli.py  config_store.py  context.py  repl_skin.py  session.py
backend/cli/commands/: admin.py  analytics.py  auth.py  campaigns.py  chat.py  domains.py  health.py  outreach.py  prospects.py  send.py  sequences.py  setup.py  templates.py  tunnel.py
backend/data/campaign_docs/: docs_meta.json  keyword_index.json
backend/tests/: conftest.py
backend/tests/api/: test_endpoints.py
(+16 files in other folders)
